--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,8 @@
 </head>
 
 <body>
-  <script>
-    fetch("get_data.php")
-      .then((response) => {
-        if (!response.ok) {
-          throw new Error("Error al obtenir les dades!");
-        }
-        return response.json();
-      })
-      .then((data) => {
-        console.log(data)
-      })
-  </script>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
