--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,12 @@
 </head>
 
 <body>
+  <div id="controls">
+    <select id="selectAny"></select>
+    <select id="selectEspecie"></select>
+  </div>
   <div id="map"></div>
+
   <script src="utils.js"></script>
   <script src="app.js"></script>
 </body>
