--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,64 @@
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.3/MarkerCluster.Default.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.3/MarkerCluster.css" />
+  <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
 
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.5.3/leaflet.markercluster.js"></script>
 
 </head>
 
 <body>
-  <div id="controls">
-    <select id="selectAny"></select>
-    <select id="selectEspecie"></select>
-  </div>
-  <div id="map"></div>
 
+  <div id="container">
+    <div id="controls">
+      <select id="selectAny"></select>
+      <select id="selectEspecie"></select>
+      <button type="button" class="btn btn-secondary btn-lg" data-toggle="modal" data-target="#taulaResum">
+        Consultar taula resum
+      </button>
+    </div>
+    <div id="map"></div>
+
+    <!-- The Modal -->
+    <div class="modal" id="taulaResum">
+      <div class="modal-dialog">
+        <div class="modal-content">
+
+          <!-- Modal Header -->
+          <div class="modal-header">
+            <h4 class="modal-title">Taula resum</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+
+          <!-- Modal body -->
+          <div class="modal-body">
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Any</th>
+                  <th>Setmana</th>
+                  <th>Espècie</th>
+                  <th>Total</th>
+                </tr>
+              </thead>
+              <tbody id="bodyTaulaResum">
+
+              </tbody>
+            </table>
+          </div>
+
+          <!-- Modal footer -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Tancar</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="utils.js"></script>
   <script src="app.js"></script>
 </body>
